# miti_small

./: .gitignore  README.md
20230502_poster/: README.md  pyproject.toml
20230502_poster/data/imported/: display_names.csv  genomes.list  taxids.list
20230502_poster/place_genome_on_tree/: download_genomes.ipynb  prune_tree.ipynb
integrate_Abricate_ImmeDB/: README.md  daisy_immeDB_parser.ipynb  integrate_Abricate_ImmeDB.py  pyproject.toml
